# telco-cvm-agent

./: pyproject.toml
data/simulated/: assignments.parquet  campaigns.parquet  customers.parquet  offers.parquet  plans.parquet  usage.parquet
reports/: week_1.md  week_3.md
scripts/: run_analyst.py  seed.py
src/cvm/: __init__.py
src/cvm/agents/: analyst.py
src/cvm/prompts/: analyst_system.md
src/cvm/simulator/: entities.py  generator.py
src/cvm/tools/: data_tools.py
tests/: test_data_tools.py  test_simulator.py
