[project]
name = "cvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.15.0",
    "numpy>=2.4.4",
    "polars>=1.40.0",
    "pydantic>=2.13.3",
]

[project.scripts]
cvm = "cvm:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.23.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "streamlit>=1.56.0",
]
